--- a/nodejs-demo-k8s/helmchart/app-demo-value.yaml
+++ b/nodejs-demo-k8s/helmchart/app-demo-value.yaml
@@ -5,8 +5,8 @@
 replicaCount: 2
 
 image:
-  repository: harbor.prod.viettq.com/demo/my-app
-  pullPolicy: Always
+  repository: docker.io/library/my-nodejs-app
+  pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "v1"
 
@@ -37,17 +37,19 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
+  type: NodePort
   port: 80
+  targetPort: 8080
+  nodePort: 30080
 
 ingress:
-  enabled: true
+  enabled: false
   className: "local"
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: demo-helm.prod.viettq.com
+    - host: k8snode.local
       paths:
         - path: /
           pathType: ImplementationSpecific
