--- a/nodejs-demo-k8s/kubernetes/deployment.yaml
+++ b/nodejs-demo-k8s/kubernetes/deployment.yaml
@@ -16,8 +16,8 @@ spec:
     spec:
       containers:
         - name: node-app-image
-          image: harbor.prod.viettq.com/demo/my-app:v5
-          imagePullPolicy: Always
+          image: docker.io/library/my-nodejs-app:v1
+          imagePullPolicy: IfNotPresent
           resources:
             # Specifying the resourses that we might need for our application
             limits:
